add support for NAG compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,8 @@ elseif("${CMAKE_Fortran_COMPILER_ID}" MATCHES "PGI")
   include(compiler/pgi.cmake)
 elseif("${CMAKE_Fortran_COMPILER_ID}" MATCHES "Intel")
   include(compiler/intel.cmake)
+elseif("${CMAKE_Fortran_COMPILER_ID}" MATCHES "NAG")
+  include(compiler/nag.cmake)
 else()
   include(compiler/gnu.cmake)
 endif()
