Fixed path to OMNI used in CLAW build

--- a/cx2t/CMakeLists.txt
+++ b/cx2t/CMakeLists.txt
@@ -1,6 +1,12 @@
 # This file is released under terms of BSD license
 # See LICENSE file for more information
 
+configure_file(
+  ${CMAKE_CURRENT_SOURCE_DIR}/claw.properties.in
+  ${CMAKE_CURRENT_SOURCE_DIR}/claw.properties
+  @ONLY
+)
+
 if(OFFLINE)
   set(DISABLE_RESOLVE "-Doffline=true")
 endif()
