--- a/cx2t/unittest/build.xml
+++ b/cx2t/unittest/build.xml
@@ -10,7 +10,9 @@
   <dirname property="antfile.dir" file="${ant.file}"/>
 
   <import file="../common-targets.xml"/>
-  <property file="../claw.properties"/>
+  <!-- Value set externally-->
+  <property name="claw.properties.dir" value=""/>
+  <property file="${claw.properties.dir}/claw.properties"/>
 
   <!-- JaCoCo code coverage -->
   <taskdef uri="antlib:org.jacoco.ant" resource="org/jacoco/ant/antlib.xml">
