--- a/cx2t/unittest/CMakeLists.txt
+++ b/cx2t/unittest/CMakeLists.txt
@@ -20,6 +20,7 @@ if(NOT OFFLINE)
     -Dantfile.dir=${CMAKE_CURRENT_SOURCE_DIR}
     -Ddist.dir=${CMAKE_BINARY_DIR}/build
     -Dclaw.properties.dir=${CMAKE_CURRENT_BINARY_DIR}/..
+    -Dlib.dir.prefix=${CMAKE_CURRENT_BINARY_DIR}/..
     init
     COMMENT "Resolving dependencies for the build"
   )
@@ -34,6 +35,7 @@ add_custom_command(
   -Dantfile.dir=${CMAKE_CURRENT_SOURCE_DIR}
   -Ddist.dir=${CMAKE_BINARY_DIR}/build
   -Dclaw.properties.dir=${CMAKE_CURRENT_BINARY_DIR}/..
+  -Dlib.dir.prefix=${CMAKE_CURRENT_BINARY_DIR}/..
   ${DISABLE_RESOLVE}
   COMMENT "Building CLAW XcodeML/F to XcodeML/F unit tests"
 )
@@ -49,6 +51,7 @@ add_test(
   -Ddist.dir=${CMAKE_BINARY_DIR}/build
   -Dtest.reports=${CMAKE_BINARY_DIR}/reports
   -Dclaw.properties.dir=${CMAKE_CURRENT_BINARY_DIR}/..
+  -Dlib.dir.prefix=${CMAKE_CURRENT_BINARY_DIR}/..
   ${DISABLE_RESOLVE}
   junit-tatsu
 )
@@ -62,6 +65,7 @@ add_test(
   -Ddist.dir=${CMAKE_BINARY_DIR}/build
   -Dtest.reports=${CMAKE_BINARY_DIR}/reports
   -Dclaw.properties.dir=${CMAKE_CURRENT_BINARY_DIR}/..
+  -Dlib.dir.prefix=${CMAKE_CURRENT_BINARY_DIR}/..
   ${DISABLE_RESOLVE}
   junit-shenron
 )
@@ -75,6 +79,7 @@ add_test(
   -Ddist.dir=${CMAKE_BINARY_DIR}/build
   -Dtest.reports=${CMAKE_BINARY_DIR}/reports
   -Dclaw.properties.dir=${CMAKE_CURRENT_BINARY_DIR}/..
+  -Dlib.dir.prefix=${CMAKE_CURRENT_BINARY_DIR}/..
   ${DISABLE_RESOLVE}
   junit-wani
 )
