--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -43,10 +43,10 @@ file(
   FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ
 )
 
-set(ANTLR4 "${CMAKE_SOURCE_DIR}/cx2t/lib/${ANTLR4_NAME}.jar")
-set(ANTLR4_RUNTIME "${CMAKE_SOURCE_DIR}/cx2t/lib/${ANTLR4_RUNTIME_NAME}.jar")
-set(COMMON_CLI "${CMAKE_SOURCE_DIR}/cx2t/lib/${COMMON_CLI_NAME}.jar")
-set(TOML "${CMAKE_SOURCE_DIR}/cx2t/lib/${TOML_NAME}.jar")
+set(ANTLR4 "${CMAKE_BINARY_DIR}/cx2t/lib/${ANTLR4_NAME}.jar")
+set(ANTLR4_RUNTIME "${CMAKE_BINARY_DIR}/cx2t/lib/${ANTLR4_RUNTIME_NAME}.jar")
+set(COMMON_CLI "${CMAKE_BINARY_DIR}/cx2t/lib/${COMMON_CLI_NAME}.jar")
+set(TOML "${CMAKE_BINARY_DIR}/cx2t/lib/${TOML_NAME}.jar")
 
 
 configure_file(
