--- a/cx2t/unittest/CMakeLists.txt
+++ b/cx2t/unittest/CMakeLists.txt
@@ -6,7 +6,7 @@
 # Configure files depending on a path
 configure_file(
   ${CMAKE_CURRENT_SOURCE_DIR}/helper/TestConstant.java.in
-  ${CMAKE_CURRENT_SOURCE_DIR}/helper/TestConstant.java
+  ${CMAKE_CURRENT_BINARY_DIR}/helper/TestConstant.java
   @ONLY
 )
 
@@ -22,6 +22,7 @@ if(NOT OFFLINE)
     -Dclaw.properties.dir=${CMAKE_CURRENT_BINARY_DIR}/..
     -Dlib.dir.prefix=${CMAKE_CURRENT_BINARY_DIR}/..
     -Dbin.dir=${CMAKE_CURRENT_BINARY_DIR}/bin
+    -Dgen.src.dir=${CMAKE_CURRENT_BINARY_DIR}
     init
     COMMENT "Resolving dependencies for the build"
   )
@@ -38,6 +39,7 @@ add_custom_command(
   -Dclaw.properties.dir=${CMAKE_CURRENT_BINARY_DIR}/..
   -Dlib.dir.prefix=${CMAKE_CURRENT_BINARY_DIR}/..
   -Dbin.dir=${CMAKE_CURRENT_BINARY_DIR}/bin
+  -Dgen.src.dir=${CMAKE_CURRENT_BINARY_DIR}
   ${DISABLE_RESOLVE}
   COMMENT "Building CLAW XcodeML/F to XcodeML/F unit tests"
 )
@@ -55,6 +57,7 @@ add_test(
   -Dclaw.properties.dir=${CMAKE_CURRENT_BINARY_DIR}/..
   -Dlib.dir.prefix=${CMAKE_CURRENT_BINARY_DIR}/..
   -Dbin.dir=${CMAKE_CURRENT_BINARY_DIR}/bin
+  -Dgen.src.dir=${CMAKE_CURRENT_BINARY_DIR}
   ${DISABLE_RESOLVE}
   junit-tatsu
 )
@@ -70,6 +73,7 @@ add_test(
   -Dclaw.properties.dir=${CMAKE_CURRENT_BINARY_DIR}/..
   -Dlib.dir.prefix=${CMAKE_CURRENT_BINARY_DIR}/..
   -Dbin.dir=${CMAKE_CURRENT_BINARY_DIR}/bin
+  -Dgen.src.dir=${CMAKE_CURRENT_BINARY_DIR}
   ${DISABLE_RESOLVE}
   junit-shenron
 )
@@ -85,6 +89,7 @@ add_test(
   -Dclaw.properties.dir=${CMAKE_CURRENT_BINARY_DIR}/..
   -Dlib.dir.prefix=${CMAKE_CURRENT_BINARY_DIR}/..
   -Dbin.dir=${CMAKE_CURRENT_BINARY_DIR}/bin
+  -Dgen.src.dir=${CMAKE_CURRENT_BINARY_DIR}
   ${DISABLE_RESOLVE}
   junit-wani
 )
