Added java version check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,11 @@ find_package(Java 8 REQUIRED)
 # Warning!!! After finding the first version, find_package(Java) does NOT look for others. CMAKE_FIND_PACKAGE_SORT_ORDER
 # and CMAKE_FIND_PACKAGE_SORT_DIRECTION have no effect. To override the "default" java version, set both cmake and
 # environment variables JAVA_HOME to desired java installation path.
-message(STATUS "Java_VERSION_STRING: \"${Java_VERSION_STRING}\" Java_VERSION_MAJOR: \"${Java_VERSION_MAJOR}\"" )
+
+if(Java_VERSION_MAJOR GREATER 13)
+    message(FATAL_ERROR "Java ${Java_VERSION_MAJOR} is not supported")
+endif()
+
 find_package(Ant 1.7.1 REQUIRED)
 include(ExternalProject)
 include(cmake/git.cmake)
