SCA: Add test for separate iteration ranges across backends

--- a/test/claw/sca/CMakeLists.txt
+++ b/test/claw/sca/CMakeLists.txt
@@ -50,8 +50,9 @@
 # sca45: sca routine
 # sca46: simple RETURN transformation
 # sca47: Issue #578 regression
+# sca48: SCA with model config and separate size and iteration dimension variables
 
-foreach(loop_var RANGE 1 47)
+foreach(loop_var RANGE 1 48)
   if(NOT ${loop_var} EQUAL 30)
     set(CLAW_FLAGS_TARGET_CPU_sca${loop_var} --directive=none)
   endif()
@@ -79,6 +80,10 @@ set(
   CLAW_FLAGS_sca45
   --model-config=${CMAKE_CURRENT_SOURCE_DIR}/sca45/model.toml
   -x=sca_elemental_promotion_assumed:false
+)
+set(
+  CLAW_FLAGS_sca48
+  --model-config=${CMAKE_CURRENT_SOURCE_DIR}/iteration_size_model.toml
 )
 
 claw_add_advanced_test_set(
